# rag_samples

./: .env.example  .gitignore  .langchain_cache.db  README.md  pyproject.toml  snapshot_download.py
AgenticRAG/: Chuong_1_AgenticRAG_Fundamentals.md  Chuong_2_Tools_And_Routing.md  Chuong_3_LangGraph_Core_Concepts.md  Chuong_4_Multi_Agent_Collaboration.md  Chuong_5_Advanced_Agentic_Patterns.md  GiaoTrinh_AgenticRAG.md
BCISymbiosis/: GiaoTrinh_BCISymbiosis.md
DynamicGraphRAG/: GiaoTrinh_DynamicGraph.md
GraphRAG/: .env  Bi_Kip_GraphRAG_Master.md  Chuong_1_Neo4j_DeepDive.md  Chuong_2_Graph_Extraction_Code.md  Chuong_3_Microsoft_GraphRAG_Core.md  Chuong_4_Hybrid_Architecture_Scale.md  Chuong_5_Evaluation_And_Agents.md  GiaoTrinh_GraphRAG.md  GiaoTrinh_Neo4j_Cypher.md  affilate.cypher  bai_2.1_knowledge_extraction.py  bai_2.2_build_graph.py  bai_2.3_graph_retrieval.py  bai_2.4_langchain_graph.py  docker-compose.yml  import_vn_admin.py  test_graph_extraction.py  test_text_to_cypher.py
OmniAgents/: Chuong_1_Multimodal_Foundation.md  Chuong_2_Interactive_Environment.md  Chuong_3_LangGraph_Omni.md  Chuong_4_Shopee_Sniper.md  GiaoTrinh_OmniAgents.md
SelfEvolvingAgents/: GiaoTrinh_SelfEvolving.md
SwarmSLM/: GiaoTrinh_SwarmSLM.md
docs/: curriculum.md
examples/: 01_connect_supabase.py  02_enable_pgvector.py  03_vector_search.py  04_langchain_hf_rag.py  05_semantic_chunking.py  06_langchain_ollama_rag.py  07_upsert_vector.py  08_query_expansion.py  09_hybrid_search.py  10_standard_upsert.py  10a_setup_standard_rag_table.py  11_reranking.py  12_evaluate_rag.py  (+5 more)
(+16 files in other folders)
