[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "flagembedding>=1.4.0",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-neo4j>=0.1.0",
    "neo4j>=6.2.0",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
    "graphrag>=3.1.0",
]
